@@ -1,3 +1,8 @@
+2008-08-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* dir-lookup.c (diskfs_S_dir_lookup): Revert 2008-06-06 change, as it
+	breaks when np == dnp.
+
 2008-06-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* dir-lookup.c (diskfs_lookup): Add const qualifier to parameter
